--- a/index.html
+++ b/index.html
@@ -3,60 +3,105 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Splash generator</title>
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+        crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+        integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="splash-generator.css">
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
-  <form>
+  <div class="container text-center">
     <div>
-      <h4>1. Choose source image (SVG preferred)</h4>
-      <input type="file" id="svgInput">
+      <h1>9-patch splash screen generator</h1>
+      <p class="lead">
+        Use this tool to quickly generate splash screens for Android.<br>
+        Just choose an image, and it will be centered in the screen.
+      </p>
     </div>
-    <div>
-      <h4>2. Set params</h4>
+    <div class="row">
+      <form class="form-horizontal splash-form center-block">
+        <h4>1. Choose source image (SVG preferred)</h4>
+        <div class="form-group">
+          <input type="file" class="form-control" id="svgInput">
+        </div>
 
-      <div>
-        <label>Margin top</label>
-        <input type="number" id="marginTop" min="0" step="0.1" value="10">
-      </div>
+        <h4>2. Set params</h4>
 
-      <div>
-        <label>Margin right</label>
-        <input type="number" id="marginRight" min="0" step="0.1" value="10">
-      </div>
+        <div class="form-group">
+          <label for="marginTop" class="col-sm-3 control-label">Margin top</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="marginTop" min="0" step="0.1" value="10">
+          </div>
+        </div>
 
-      <div>
-        <label>Margin down</label>
-        <input type="number" id="marginBottom" min="0" step="0.1" value="10">
-      </div>
+        <div class="form-group">
+          <label for="marginRight" class="col-sm-3 control-label">Margin right</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="marginRight" min="0" step="0.1" value="10">
+          </div>
+        </div>
 
-      <div>
-        <label>Margin left</label>
-        <input type="number" id="marginLeft" min="0" step="0.1" value="10">
-      </div>
+        <div class="form-group">
+          <label for="marginBottom" class="col-sm-3 control-label">Margin down</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="marginBottom" min="0" step="0.1" value="10">
+          </div>
+        </div>
 
-      <div>
-        <label>Max width</label>
-        <input type="number" id="maxWidth" min="0" step="1" value="2000">
-      </div>
+        <div class="form-group">
+          <label for="marginLeft" class="col-sm-3 control-label">Margin left</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="marginLeft" min="0" step="0.1" value="10">
+          </div>
+        </div>
 
-      <div>
-        <label>Max height</label>
-        <input type="number" id="maxHeight" min="0" step="1" value="2000">
-      </div>
+        <div class="form-group">
+          <label for="maxWidth" class="col-sm-3 control-label">Max width</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="maxWidth" min="0" step="1" value="2000">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="maxHeight" class="col-sm-3 control-label">Max height</label>
+          <div class="col-sm-9">
+            <input type="number" class="form-control" id="maxHeight" min="0" step="1" value="2000">
+          </div>
+        </div>
+        <div class="form-group">
+          <h4>3. Generate</h4>
+
+          <button type="button" class="btn btn-default" id="submitButton">
+            Generate
+          </button>
+
+          <button type="button" class="btn btn-default" id="downloadButton">
+            Generate and download
+          </button>
+        </div>
+      </form>
     </div>
-    <div>
-      <h4>3. Generate</h4>
 
-      <button type="button" id="submitButton">Generate</button>
-
-      <button type="button" id="downloadButton">Generate and download</button>
+    <div id="canvasContainer">
     </div>
-  </form>
-  <div id="canvasContainer">
   </div>
+
 
   <script type="text/javascript" src="lib/jszip.min.js"></script>
   <script type="text/javascript" src="lib/FileSaver.min.js"></script>
   <script type="text/javascript" src="lib/jquery-2.2.3.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+          integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+          crossorigin="anonymous"></script>
   <script type="text/javascript" src="splash-generator.js"></script>
 </body>
 </html>
