--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
         integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
         crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.3.3/css/bootstrap-colorpicker.min.css">
   <link rel="stylesheet" href="splash-generator.css">
+
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -77,6 +80,14 @@
             <input type="number" class="form-control" id="maxHeight" min="0" step="1" value="2000">
           </div>
         </div>
+
+        <div class="form-group">
+          <label for="inputBackground" class="col-sm-3 control-label">Background color</label>
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="inputBackground" value="#ffffff">
+          </div>
+        </div>
+
         <div class="form-group">
           <h4>3. Generate</h4>
 
@@ -102,6 +113,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
           integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
           crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.3.3/js/bootstrap-colorpicker.min.js"></script>
   <script type="text/javascript" src="splash-generator.js"></script>
 </body>
 </html>
